package bikemoves;

message User {
  enum Gender {
    NOT_SPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
    OTHER = 3;
  }

  enum Age {
    NOT_SPECIFIED = 0;
    AGE_UNDER_15 = 1;
    AGE_15_TO_19 = 2;
    AGE_20_TO_24 = 3;
    AGE_25_TO_34 = 4;
    AGE_35_TO_44 = 5;
    AGE_45_TO_54 = 6;
    AGE_55_TO_64 = 7;
    AGE_65_TO_74 = 8;
    AGE_75_AND_OLDER = 9;
  }

  enum ExperienceLevel {
    NOT_SPECIFIED = 0;
    BEGINNER = 1;
    INTERMEDIATE = 2;
    ADVANCED = 3;
  }

  required string device_uuid = 1;
  required string platform_name = 2;
  required float platform_version = 3;
  optional Gender gender = 4;
  optional Age age = 5;
  optional ExperienceLevel cycling_experience = 6;
}

message Trip {
  enum LocationType {
    NOT_SPECIFIED = 0;
    HOME = 1;
    WORK = 2;
    K12_SCHOOL = 3;
    UNIVERSITY = 4;
    SHOPPING = 5;
    OTHER = 6;
  }

  message Location {
    required double longitude = 1;
    required double latitude = 2;
    required uint64 time = 3;
    optional double accuracy = 4;
    optional double altitude = 5;
    optional double heading = 6;
    optional double speed = 7;
    optional bool moving = 8;
  }

  required string device_uuid = 1;
  repeated Location locations = 2;
  required uint64 start_time = 3;
  required uint64 end_time = 4;
  required double desired_accuracy = 5;
  required bool transit = 6;
  optional LocationType origin = 7;
  optional LocationType destination = 8;
}

message Incident {
  enum IncidentCategory {
    BIKE_ON_BIKE = 1;
    BIKE_ON_OBJECT  = 2;
    BIKE_ON_VEHICLE = 3;
    VEGETATION = 4;
    DEBRIS = 5;
    POTHOLE = 6;
  }

  message Location {
    required double longitude = 1;
    required double latitude = 2;
    required uint64 time = 3;
    optional double accuracy = 4;
    optional double altitude = 5;
    optional double heading = 6;
    optional double speed = 7;
    optional bool moving = 8;
  }

  required string device_uuid = 1;
  required string comment = 2;
}
